--- a/ui/mainwindow.ui
+++ b/ui/mainwindow.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>821</width>
-    <height>365</height>
+    <width>901</width>
+    <height>430</height>
    </rect>
   </property>
   <property name="sizePolicy">
@@ -18,14 +18,14 @@
   </property>
   <property name="minimumSize">
    <size>
-    <width>821</width>
-    <height>365</height>
+    <width>901</width>
+    <height>430</height>
    </size>
   </property>
   <property name="maximumSize">
    <size>
-    <width>821</width>
-    <height>365</height>
+    <width>901</width>
+    <height>430</height>
    </size>
   </property>
   <property name="windowTitle">
@@ -49,7 +49,7 @@
     <property name="geometry">
      <rect>
       <x>10</x>
-      <y>0</y>
+      <y>10</y>
       <width>371</width>
       <height>20</height>
      </rect>
@@ -70,11 +70,11 @@
      <string>Enter Full Path to File/Directory:</string>
     </property>
    </widget>
-   <widget class="QLabel" name="whereKeyPrompt">
+   <widget class="QLabel" name="keyPathPrompt">
     <property name="geometry">
      <rect>
       <x>10</x>
-      <y>80</y>
+      <y>90</y>
       <width>371</width>
       <height>16</height>
      </rect>
@@ -87,8 +87,8 @@
     <property name="geometry">
      <rect>
       <x>10</x>
-      <y>30</y>
-      <width>311</width>
+      <y>40</y>
+      <width>371</width>
       <height>31</height>
      </rect>
     </property>
@@ -97,8 +97,8 @@
     <property name="geometry">
      <rect>
       <x>10</x>
-      <y>110</y>
-      <width>311</width>
+      <y>120</y>
+      <width>371</width>
       <height>31</height>
      </rect>
     </property>
@@ -107,8 +107,8 @@
     <property name="geometry">
      <rect>
       <x>10</x>
-      <y>300</y>
-      <width>181</width>
+      <y>360</y>
+      <width>211</width>
       <height>31</height>
      </rect>
     </property>
@@ -122,9 +122,9 @@
    <widget class="QPushButton" name="DecryptButton">
     <property name="geometry">
      <rect>
-      <x>200</x>
-      <y>300</y>
-      <width>181</width>
+      <x>230</x>
+      <y>360</y>
+      <width>211</width>
       <height>31</height>
      </rect>
     </property>
@@ -132,39 +132,39 @@
      <string>Decrypt</string>
     </property>
    </widget>
-   <widget class="QPushButton" name="valDirPath">
+   <widget class="QPushButton" name="setDirPath">
     <property name="geometry">
      <rect>
-      <x>330</x>
-      <y>30</y>
+      <x>390</x>
+      <y>40</y>
       <width>51</width>
       <height>31</height>
      </rect>
     </property>
     <property name="text">
-     <string>Set</string>
+     <string>Ok</string>
     </property>
    </widget>
-   <widget class="QPushButton" name="dirKeyPath">
+   <widget class="QPushButton" name="setKeyPath">
     <property name="geometry">
      <rect>
-      <x>330</x>
-      <y>110</y>
+      <x>390</x>
+      <y>120</y>
       <width>51</width>
       <height>31</height>
      </rect>
     </property>
     <property name="text">
-     <string>Set</string>
+     <string>Ok</string>
     </property>
    </widget>
-   <widget class="QListWidget" name="fileNames">
+   <widget class="QListWidget" name="fileNamesList">
     <property name="geometry">
      <rect>
-      <x>400</x>
-      <y>9</y>
-      <width>411</width>
-      <height>321</height>
+      <x>460</x>
+      <y>40</y>
+      <width>431</width>
+      <height>351</height>
      </rect>
     </property>
     <property name="horizontalScrollBarPolicy">
@@ -177,13 +177,13 @@
      <enum>QAbstractItemView::ScrollMode::ScrollPerPixel</enum>
     </property>
    </widget>
-   <widget class="QScrollArea" name="scrollAreaPath">
+   <widget class="QScrollArea" name="scrollAreaDirPath">
     <property name="geometry">
      <rect>
       <x>10</x>
-      <y>180</y>
-      <width>371</width>
-      <height>31</height>
+      <y>190</y>
+      <width>431</width>
+      <height>51</height>
      </rect>
     </property>
     <property name="frameShape">
@@ -203,8 +203,8 @@
       <rect>
        <x>0</x>
        <y>0</y>
-       <width>369</width>
-       <height>29</height>
+       <width>429</width>
+       <height>49</height>
       </rect>
      </property>
     </widget>
@@ -213,9 +213,9 @@
     <property name="geometry">
      <rect>
       <x>10</x>
-      <y>240</y>
-      <width>371</width>
-      <height>31</height>
+      <y>280</y>
+      <width>431</width>
+      <height>51</height>
      </rect>
     </property>
     <property name="frameShape">
@@ -229,8 +229,8 @@
       <rect>
        <x>0</x>
        <y>0</y>
-       <width>369</width>
-       <height>29</height>
+       <width>429</width>
+       <height>49</height>
       </rect>
      </property>
     </widget>
@@ -239,7 +239,7 @@
     <property name="geometry">
      <rect>
       <x>10</x>
-      <y>220</y>
+      <y>260</y>
       <width>371</width>
       <height>20</height>
      </rect>
@@ -252,7 +252,7 @@
     <property name="geometry">
      <rect>
       <x>10</x>
-      <y>160</y>
+      <y>170</y>
       <width>371</width>
       <height>20</height>
      </rect>
@@ -270,30 +270,42 @@
      <bool>false</bool>
     </property>
    </widget>
-   <widget class="QLabel" name="showPath">
+   <widget class="QLabel" name="fileNamesLabel">
     <property name="geometry">
      <rect>
-      <x>10</x>
-      <y>150</y>
-      <width>37</width>
-      <height>12</height>
+      <x>460</x>
+      <y>10</y>
+      <width>371</width>
+      <height>20</height>
      </rect>
     </property>
+    <property name="sizePolicy">
+     <sizepolicy hsizetype="Fixed" vsizetype="Fixed">
+      <horstretch>0</horstretch>
+      <verstretch>0</verstretch>
+     </sizepolicy>
+    </property>
+    <property name="font">
+     <font>
+      <family>Segoe UI</family>
+      <bold>false</bold>
+     </font>
+    </property>
     <property name="text">
-     <string/>
+     <string>Changed Files:</string>
     </property>
    </widget>
-   <widget class="QLabel" name="showKeyPath">
+   <widget class="QPushButton" name="clearFileNamesList">
     <property name="geometry">
      <rect>
-      <x>10</x>
-      <y>210</y>
-      <width>37</width>
-      <height>12</height>
+      <x>830</x>
+      <y>10</y>
+      <width>61</width>
+      <height>21</height>
      </rect>
     </property>
     <property name="text">
-     <string/>
+     <string>Clear</string>
     </property>
    </widget>
   </widget>
@@ -302,7 +314,7 @@
     <rect>
      <x>0</x>
      <y>0</y>
-     <width>821</width>
+     <width>901</width>
      <height>17</height>
     </rect>
    </property>
