--- a/ui/mainwindow.ui
+++ b/ui/mainwindow.ui
@@ -29,7 +29,7 @@
    </size>
   </property>
   <property name="windowTitle">
-   <string>XEncrypt</string>
+   <string>AES-XEncrypt</string>
   </property>
   <property name="windowIcon">
    <iconset resource="resources.qrc">
